Make embed code have the correct right margin so it doesnt overlap scrollbar

--- a/static/css/pad_lite.css
+++ b/static/css/pad_lite.css
@@ -714,7 +714,7 @@ position:absolute;
 top:40px;
 font-size:14px;
 width:400px;
-right: 5px;
+right: 20px;
 z-index: 500;
 background-color: #000;
 color: white;
